# DiffReach

./: README.md  cartpole_pgd.ipynb  cartpole_reach.ipynb  pyproject.toml  run_ctl.py  run_dyn.py  run_plan.py
config/ct_ctl/: cartpole.yaml  cartpole_immrax.yaml  single_pendulum.yaml
config/ct_dyn/: quadrotor.yaml  van_der_pol.yaml  van_der_pol_immrax.yaml
config/ct_plan/: test.yaml
config/dt_ctl/: test.yaml
config/dt_dyn/: test.yaml
config/dt_plan/: test.yaml
models/controllers/dt_ctl/: test.onnx
models/dynamics/ct_ctl/: cartpole.py  single_pendulum.py
models/dynamics/ct_dyn/: quadrotor.py  van_der_pol.py
models/dynamics/ct_plan/: test.onnx  test.py
models/dynamics/dt_ctl/: test.onnx  test.py
models/dynamics/dt_dyn/: test.onnx  test.py
models/dynamics/dt_plan/: test.py
src/: crown_wrapper.py  interval.py  picard.py  polynomial.py  reachability.py  reachability_baseline.py  rhs_eval.py  rhs_eval_nn.py  settings.py  symbolic_remainder.py  systems.py  taylor_model.py
src/utils/: box_set.py  convert.py  load.py  to_relu.py  vis.py
